Updated main file with csv file

--- a/main.ipynb
+++ b/main.ipynb
@@ -143,17 +143,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3ee42471",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.amazon.in/s?k=bags&crid=2M096C61O4MLT&qid=1653308124&sprefix=ba%2Caps%2C283&ref=sr_pg_1\n",
+      "https://www.amazon.in/s?k=bags&page=2&crid=2M096C61O4MLT&qid=1685196078&sprefix=ba%2Caps%2C283&ref=sr_pg_1\n",
+      "https://www.amazon.in/s?k=bags&page=3&crid=2M096C61O4MLT&qid=1685196080&sprefix=ba%2Caps%2C283&ref=sr_pg_2\n",
+      "https://www.amazon.in/s?k=bags&page=4&crid=2M096C61O4MLT&qid=1685196081&sprefix=ba%2Caps%2C283&ref=sr_pg_3\n",
+      "https://www.amazon.in/s?k=bags&page=5&crid=2M096C61O4MLT&qid=1685196083&sprefix=ba%2Caps%2C283&ref=sr_pg_4\n",
+      "https://www.amazon.in/s?k=bags&page=6&crid=2M096C61O4MLT&qid=1685196084&sprefix=ba%2Caps%2C283&ref=sr_pg_5\n",
+      "https://www.amazon.in/s?k=bags&page=7&crid=2M096C61O4MLT&qid=1685196085&sprefix=ba%2Caps%2C283&ref=sr_pg_6\n",
+      "https://www.amazon.in/s?k=bags&page=8&crid=2M096C61O4MLT&qid=1685196087&sprefix=ba%2Caps%2C283&ref=sr_pg_7\n",
+      "https://www.amazon.in/s?k=bags&page=9&crid=2M096C61O4MLT&qid=1685196088&sprefix=ba%2Caps%2C283&ref=sr_pg_8\n",
+      "https://www.amazon.in/s?k=bags&page=10&crid=2M096C61O4MLT&qid=1685196090&sprefix=ba%2Caps%2C283&ref=sr_pg_9\n",
+      "https://www.amazon.in/s?k=bags&page=11&crid=2M096C61O4MLT&qid=1685196092&sprefix=ba%2Caps%2C283&ref=sr_pg_10\n",
+      "https://www.amazon.in/s?k=bags&page=12&crid=2M096C61O4MLT&qid=1685196094&sprefix=ba%2Caps%2C283&ref=sr_pg_11\n",
+      "https://www.amazon.in/s?k=bags&page=13&crid=2M096C61O4MLT&qid=1685196096&sprefix=ba%2Caps%2C283&ref=sr_pg_12\n",
+      "https://www.amazon.in/s?k=bags&page=14&crid=2M096C61O4MLT&qid=1685196097&sprefix=ba%2Caps%2C283&ref=sr_pg_13\n",
+      "https://www.amazon.in/s?k=bags&page=15&crid=2M096C61O4MLT&qid=1685196098&sprefix=ba%2Caps%2C283&ref=sr_pg_14\n",
+      "https://www.amazon.in/s?k=bags&page=16&crid=2M096C61O4MLT&qid=1685196100&sprefix=ba%2Caps%2C283&ref=sr_pg_15\n",
+      "https://www.amazon.in/s?k=bags&page=17&crid=2M096C61O4MLT&qid=1685196101&sprefix=ba%2Caps%2C283&ref=sr_pg_16\n",
+      "https://www.amazon.in/s?k=bags&page=18&crid=2M096C61O4MLT&qid=1685196103&sprefix=ba%2Caps%2C283&ref=sr_pg_17\n",
+      "https://www.amazon.in/s?k=bags&page=19&crid=2M096C61O4MLT&qid=1685196104&sprefix=ba%2Caps%2C283&ref=sr_pg_18\n",
+      "https://www.amazon.in/s?k=bags&page=20&crid=2M096C61O4MLT&qid=1685196106&sprefix=ba%2Caps%2C283&ref=sr_pg_19\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == '__main__':\n",
     "\n",
-    "    # add your user agent \n",
-    "    HEADERS = ({'User-Agent':'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/113.0.0.0 Safari/537.36', 'Accept-Language': 'en-US, en;q=0.5'})\n",
+    "    # adding user agent \n",
+    "    HEADERS = ({'User-Agent':'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/113.0.0.0 Safari/537.36 Edg/113.0.1774.57', 'Accept-Language': 'en-US, en;q=0.5'})\n",
     "\n",
-    "    # The webpage URL\n",
+    "    # adding webpage URL\n",
     "    URL = \"https://www.amazon.in/s?k=bags&crid=2M096C61O4MLT&qid=1653308124&sprefix=ba%2Caps%2C283&ref=sr_pg_1\"\n",
     "    \n",
     "    # Creating URL_list for 20 URL's of product pages\n",
@@ -161,7 +188,6 @@
     "    for i in range(19):\n",
     "        Pre_URL=URL_List[i]\n",
     "        webpage = requests.get(Pre_URL, headers=HEADERS)\n",
-    "        print(webpage)\n",
     "        soup = BeautifulSoup(webpage.content, \"html.parser\")\n",
     "        URL2= 'https://www.amazon.in'+soup.find(\"a\", attrs={'class':\"s-pagination-item s-pagination-next s-pagination-button s-pagination-separator\"}).get('href')\n",
     "        URL_List.append(URL2)\n",
@@ -172,6 +198,7 @@
     "    \n",
     "    #For each url \n",
     "    for urlx in URL_List:\n",
+    "        #printing url for which data will been scraped\n",
     "        print(urlx)\n",
     "        \n",
     "        # HTTP Request\n",
@@ -235,10 +262,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "42b07180",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Product URL</th>\n",
+       "      <th>ASIN</th>\n",
+       "      <th>Manufacturer</th>\n",
+       "      <th>Product Name</th>\n",
+       "      <th>Product Description</th>\n",
+       "      <th>Product Price</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Number of reviews</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://www.amazon.in/sspa/click?ie=UTF8&amp;spc=M...</td>\n",
+       "      <td>B09VGNTDRZ</td>\n",
+       "      <td>Red Lemon</td>\n",
+       "      <td>Red Lemon Unisex-adult Bange Series Rhombus Sh...</td>\n",
+       "      <td>Closure: Zipper    PREMIUM MATERIAL: This styl...</td>\n",
+       "      <td>₹1,999.00</td>\n",
+       "      <td>4.4 out of 5 stars</td>\n",
+       "      <td>73 ratings</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>https://www.amazon.in/sspa/click?ie=UTF8&amp;spc=M...</td>\n",
+       "      <td>B0B1</td>\n",
+       "      <td>Red Lemon</td>\n",
+       "      <td>Red Lemon BANGE Multifunctional Waterproof Ant...</td>\n",
+       "      <td>➧ PREMIUM MATERIAL: This multifunctional sling...</td>\n",
+       "      <td>₹1,899.00</td>\n",
+       "      <td>4.3 out of 5 stars</td>\n",
+       "      <td>146 ratings</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>https://www.amazon.in/Wesley-Milestone-Waterpr...</td>\n",
+       "      <td></td>\n",
+       "      <td>Wesley</td>\n",
+       "      <td>Wesley Milestone 2.0 Casual Waterproof Laptop ...</td>\n",
+       "      <td>30L Capacity: The Backpack has a padded laptop...</td>\n",
+       "      <td>₹598.00</td>\n",
+       "      <td>4.3 out of 5 stars</td>\n",
+       "      <td>10,968 ratings</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>https://www.amazon.in/American-Tourister-AMT-S...</td>\n",
+       "      <td></td>\n",
+       "      <td>American Tourister</td>\n",
+       "      <td>American Tourister 32 Ltrs Black Casual Backpa...</td>\n",
+       "      <td>Laptop Compatibility: No, Strap Type: Adjustab...</td>\n",
+       "      <td>₹1,199.00</td>\n",
+       "      <td>4.0 out of 5 stars</td>\n",
+       "      <td>54,253 ratings</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>https://www.amazon.in/Skybags-Brat-Black-Casua...</td>\n",
+       "      <td></td>\n",
+       "      <td>Skybags</td>\n",
+       "      <td>Skybags Brat Black 46 Cms Casual Backpack</td>\n",
+       "      <td>Combination of functional &amp; safety features in...</td>\n",
+       "      <td>₹630</td>\n",
+       "      <td>4.1 out of 5 stars</td>\n",
+       "      <td>4,570 ratings</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>429</th>\n",
+       "      <td>https://www.amazon.in/Chris-Kate-Polyester-Lig...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>Chris &amp; Kate Blue 50 litres Foldable Duffle Ba...</td>\n",
+       "      <td>&lt;br&gt;Dimensions: 28 cm x 55 cm x 29 cm&lt;br&gt;    &lt;...</td>\n",
+       "      <td>₹999.00</td>\n",
+       "      <td>4.0 out of 5 stars</td>\n",
+       "      <td>328 ratings</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>430</th>\n",
+       "      <td>https://www.amazon.in/sspa/click?ie=UTF8&amp;spc=M...</td>\n",
+       "      <td>B08T1769X9</td>\n",
+       "      <td>MOKOBARA</td>\n",
+       "      <td>MOKOBARA Backpack 15.5\" Inch Laptop Backpack F...</td>\n",
+       "      <td>CRAFTED WITH INDUSTRY BEST PREMIUM MATERIALS: ...</td>\n",
+       "      <td>₹4,499</td>\n",
+       "      <td>4.3 out of 5 stars</td>\n",
+       "      <td>168 ratings</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>431</th>\n",
+       "      <td>https://www.amazon.in/sspa/click?ie=UTF8&amp;spc=M...</td>\n",
+       "      <td>B0BWNCV31</td>\n",
+       "      <td>uppercase</td>\n",
+       "      <td>uppercase Medium 17 Ltrs Vegan Leather (upto 1...</td>\n",
+       "      <td>Care Instructions: Wipe with Damp Cloth    Han...</td>\n",
+       "      <td>₹1,600.00</td>\n",
+       "      <td>4.1 out of 5 stars</td>\n",
+       "      <td>443 ratings</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>432</th>\n",
+       "      <td>https://www.amazon.in/sspa/click?ie=UTF8&amp;spc=M...</td>\n",
+       "      <td>B07GX3PWNK</td>\n",
+       "      <td>Kenneth Cole Reaction</td>\n",
+       "      <td>Kenneth Cole Reaction Women's Chevron Quilted ...</td>\n",
+       "      <td>polyester    Imported    polyester lining    1...</td>\n",
+       "      <td>₹3,275.00</td>\n",
+       "      <td>4.8 out of 5 stars</td>\n",
+       "      <td>237 ratings</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>433</th>\n",
+       "      <td>https://www.amazon.in/sspa/click?ie=UTF8&amp;spc=M...</td>\n",
+       "      <td>B0B7X8BYQJ</td>\n",
+       "      <td>MOKOBARA</td>\n",
+       "      <td>MOKOBARA The Work Backpack 15.6\" Inch Laptop |...</td>\n",
+       "      <td>CRAFTED WITH INDUSTRY BEST PREMIUM MATERIALS: ...</td>\n",
+       "      <td>₹6,999.00</td>\n",
+       "      <td>4.6 out of 5 stars</td>\n",
+       "      <td>53 ratings</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>434 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           Product URL        ASIN   \n",
+       "0    https://www.amazon.in/sspa/click?ie=UTF8&spc=M...  B09VGNTDRZ  \\\n",
+       "1    https://www.amazon.in/sspa/click?ie=UTF8&spc=M...        B0B1   \n",
+       "2    https://www.amazon.in/Wesley-Milestone-Waterpr...               \n",
+       "3    https://www.amazon.in/American-Tourister-AMT-S...               \n",
+       "4    https://www.amazon.in/Skybags-Brat-Black-Casua...               \n",
+       "..                                                 ...         ...   \n",
+       "429  https://www.amazon.in/Chris-Kate-Polyester-Lig...               \n",
+       "430  https://www.amazon.in/sspa/click?ie=UTF8&spc=M...  B08T1769X9   \n",
+       "431  https://www.amazon.in/sspa/click?ie=UTF8&spc=M...   B0BWNCV31   \n",
+       "432  https://www.amazon.in/sspa/click?ie=UTF8&spc=M...  B07GX3PWNK   \n",
+       "433  https://www.amazon.in/sspa/click?ie=UTF8&spc=M...  B0B7X8BYQJ   \n",
+       "\n",
+       "              Manufacturer                                       Product Name   \n",
+       "0                Red Lemon  Red Lemon Unisex-adult Bange Series Rhombus Sh...  \\\n",
+       "1                Red Lemon  Red Lemon BANGE Multifunctional Waterproof Ant...   \n",
+       "2                   Wesley  Wesley Milestone 2.0 Casual Waterproof Laptop ...   \n",
+       "3       American Tourister  American Tourister 32 Ltrs Black Casual Backpa...   \n",
+       "4                  Skybags          Skybags Brat Black 46 Cms Casual Backpack   \n",
+       "..                     ...                                                ...   \n",
+       "429                         Chris & Kate Blue 50 litres Foldable Duffle Ba...   \n",
+       "430               MOKOBARA  MOKOBARA Backpack 15.5\" Inch Laptop Backpack F...   \n",
+       "431              uppercase  uppercase Medium 17 Ltrs Vegan Leather (upto 1...   \n",
+       "432  Kenneth Cole Reaction  Kenneth Cole Reaction Women's Chevron Quilted ...   \n",
+       "433               MOKOBARA  MOKOBARA The Work Backpack 15.6\" Inch Laptop |...   \n",
+       "\n",
+       "                                   Product Description Product Price   \n",
+       "0    Closure: Zipper    PREMIUM MATERIAL: This styl...     ₹1,999.00  \\\n",
+       "1    ➧ PREMIUM MATERIAL: This multifunctional sling...     ₹1,899.00   \n",
+       "2    30L Capacity: The Backpack has a padded laptop...       ₹598.00   \n",
+       "3    Laptop Compatibility: No, Strap Type: Adjustab...     ₹1,199.00   \n",
+       "4    Combination of functional & safety features in...          ₹630   \n",
+       "..                                                 ...           ...   \n",
+       "429  <br>Dimensions: 28 cm x 55 cm x 29 cm<br>    <...       ₹999.00   \n",
+       "430  CRAFTED WITH INDUSTRY BEST PREMIUM MATERIALS: ...        ₹4,499   \n",
+       "431  Care Instructions: Wipe with Damp Cloth    Han...     ₹1,600.00   \n",
+       "432  polyester    Imported    polyester lining    1...     ₹3,275.00   \n",
+       "433  CRAFTED WITH INDUSTRY BEST PREMIUM MATERIALS: ...     ₹6,999.00   \n",
+       "\n",
+       "                 Rating Number of reviews  \n",
+       "0    4.4 out of 5 stars        73 ratings  \n",
+       "1    4.3 out of 5 stars       146 ratings  \n",
+       "2    4.3 out of 5 stars    10,968 ratings  \n",
+       "3    4.0 out of 5 stars    54,253 ratings  \n",
+       "4    4.1 out of 5 stars     4,570 ratings  \n",
+       "..                  ...               ...  \n",
+       "429  4.0 out of 5 stars       328 ratings  \n",
+       "430  4.3 out of 5 stars       168 ratings  \n",
+       "431  4.1 out of 5 stars       443 ratings  \n",
+       "432  4.8 out of 5 stars       237 ratings  \n",
+       "433  4.6 out of 5 stars        53 ratings  \n",
+       "\n",
+       "[434 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "amazon_df"
    ]
@@ -253,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "00deef46",
    "metadata": {},
    "outputs": [],
